added animation to story and bridal party

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/Grid.css">
+        <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Italianno" rel="stylesheet">
@@ -42,7 +43,7 @@
         </section>
         
         <section class="our-story" id="our-story">
-            <div class="row">
+            <div class="row js--wp-1">
                 <div class="col span-1-of-1">
                     <div class="outer-box">
                         <div class="story-box">
@@ -62,7 +63,7 @@
             <div class="row">
                 <h1>Bridal Party</h1>
             </div>
-            <div class="row">
+            <div class="row js--wp-2">
                 <div class="col span-1-of-2">
                     <div class="bridal-blurb">
                         <div>
