added scroll fade animation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </nav>
         
-        <div class="main-text-box" id="main-text-box">
+        <div class="main-text-box js--wp-3" id="main-text-box">
             <h1>We're getting married!</h1>
             <h2>May 19th, 2018<br>Minneapolis, MN</h2>
         </div>
