added more css stylings and changed home text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Italianno" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">
 
 
 
@@ -20,20 +21,22 @@
         <header id="home">
             <nav>
                 <div class="row">
-                    <a class="home" href="#home">Michelle + Tim</a>
+                    <a href="#home"><img src="resources/css/img/home.png" alt="Home" class="home"></a>
                     <ul class="main-nav js--main-nav" id="home">
                         <li><a href="#gallery">Gallery</a></li>
                         <li><a href="#our-story">Our Story</a></li>
                         <li><a href="#bridal-party">Bridal Party</a></li>
-                        <li><a href="#details">Wedding Details</a></li>
+                        <li><a href="#details">Festivities</a></li>
+                        <li><a href="#details">Registry</a></li>
                         <li><a href="#mpls">MPLS</a></li>
                     </ul>
                 </div>
             </nav>
         
-        <div class="main-text-box js--wp-3" id="main-text-box">
-            <h1>We're getting married!</h1>
-            <h2>May 19th, 2018<br>Minneapolis, MN</h2>
+        <div class="main-text-box" id="main-text-box">
+            <img src="resources/css/img/home2.png">
+            <h1><span>are</span><br>getting<br>married</h1>
+            <h2>06.19.2018<br>Minneapolis, MN</h2>
         </div>
         </header>
         
@@ -70,21 +73,21 @@
                             <img src='resources/css/img/matt.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Matt &nbsp;&nbsp;|&nbsp;&nbsp; Man of Honor</h3>
+                            <h3><span>Matt</span>&#8212;Man of Honor</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
                         </div>
                         <div>
                             <img src='resources/css/img/yusra.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Yusra &nbsp;&nbsp;|&nbsp;&nbsp; Maid of Honor</h3>
+                            <h3><span>Yusra</span>&#8212;Maid of Honor</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
                         </div>
                         <div>
                             <img src='resources/css/img/jenna.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Jenna &nbsp;&nbsp;|&nbsp;&nbsp; Bridesmaid</h3>
+                            <h3><span>Jenna</span>&#8212;Bridesmaid</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid.<br>
                             <br>
                             <br>
@@ -95,21 +98,21 @@
                             <img src='resources/css/img/riki.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Rochelle | Bridesmaid</h3>
+                            <h3><span>Rochelle</span>&#8212;Bridesmaid</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
                         </div>
                         <div>
                             <img src='resources/css/img/reva.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Reva &nbsp;&nbsp;|&nbsp;&nbsp; Bridesmaid</h3>
+                            <h3><span>Reva</span>&#8212;Bridesmaid</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
                         </div>
                         <div>
                             <img src='resources/css/img/rima.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Rima &nbsp;&nbsp;|&nbsp;&nbsp; Bridesmaid</h3>
+                            <h3><span>Rima</span>&#8212;Bridesmaid</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
                         </div>
                     </div>
@@ -120,42 +123,42 @@
                             <img src='resources/css/img/brandon.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Heather &nbsp;&nbsp;|&nbsp;&nbsp; Best Man</h3>
+                            <h3><span>Heather</span>&#8212;Best Man</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
                         </div>
                         <div>
                             <img src='resources/css/img/yusra.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Matt &nbsp;&nbsp;|&nbsp;&nbsp; Groomsman</h3>
+                            <h3><span>Ryan</span>&#8212;Groomsman</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
                         </div>
                         <div>
                             <img src='resources/css/img/jenna.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Matt &nbsp;&nbsp;|&nbsp;&nbsp; Groomsman</h3>
-                            <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
-                        </div>
-                        <div>
-                            <img src='resources/css/img/riki.JPG' alt='Matt'>
-                        </div>
-                        <div class="blurb">
-                            <h3>Matt &nbsp;&nbsp;|&nbsp;&nbsp; Groomsman</h3>
-                            <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
-                        </div>
-                        <div>
-                            <img src='resources/css/img/reva.JPG' alt='Matt'>
-                        </div>
-                        <div class="blurb">
-                            <h3>Matt &nbsp;&nbsp;|&nbsp;&nbsp; Groomsman</h3>
+                            <h3><span>Mike</span>&#8212;Groomsman</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
                         </div>
                         <div>
                             <img src='resources/css/img/brandon.JPG' alt='Matt'>
                         </div>
                         <div class="blurb">
-                            <h3>Brandon &nbsp;&nbsp;|&nbsp;&nbsp; Groomsman</h3>
+                            <h3><span>Brandon</span>&#8212;Groomsman</h3>
+                            <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
+                        </div>
+                        <div>
+                            <img src='resources/css/img/reva.JPG' alt='Matt'>
+                        </div>
+                        <div class="blurb">
+                            <h3><span>Kevin</span>&#8212;Groomsman</h3>
+                            <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
+                        </div>
+                        <div>
+                            <img src='resources/css/img/brandon.JPG' alt='Matt'>
+                        </div>
+                        <div class="blurb">
+                            <h3><span>Matt</span>&#8212;Groomsman</h3>
                             <p>Kinfolk semiotics raw denim, cronut knausgaard jean shorts sriracha. Freegan lumbersexual godard kale chips. Bushwick single-origin coffee godard hexagon knausgaard bitters heirloom tumblr beard 8-bit pug everyday carry squid. Pop-up pinterest aesthetic, 3 wolf moon chia vexillologist cray master cleanse bicycle rights wayfarers readymade. 3 wolf moon meh lumbersexual, taxidermy occupy YOLO banjo flexitarian art party tilde beard kitsch succulents pickled.</p>
                         </div>
                     </div>
