--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
         <section class="mpls" id="mpls">
             <h1>In Minneapolis</h1>
         </section>
+        
+        <footer>
+            <div class="row">
+                <h6>Site built and designed with &#9829; by Yusra</h6>
+            </div>
+        </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
