--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
         <title>Just McKellyed</title>
+        <link rel="shortcut icon" href="resources/css/img/logo.png">
     </head>
     <body>
         <header id="home">
