refactored our-story section

--- a/index.html
+++ b/index.html
@@ -47,18 +47,16 @@
         </section>
         
         <section class="our-story" id="our-story">
-            <div class="row js--wp-1">
-                <div class="col span-1-of-1">
-                    <div class="outer-box">
-                        <div class="story-box">
-                            <div class="row">
-                                <h1>Our Story</h1>
-                            </div>
-                            <div class="row">
-                                <p>La croix pug typewriter adaptogen trust fund farm-to-table meh affogato umami slow-carb af. Man braid viral venmo, meditation migas sriracha pour-over synth shoreditch trust fund. Stumptown austin prism, vinyl franzen heirloom raw denim viral vegan humblebrag sriracha freegan chartreuse brunch messenger bag. Franzen cred cloud bread activated charcoal, humblebrag chartreuse adaptogen deep v iceland tousled health goth echo park. Lomo man bun ramps gentrify glossier tumblr. Shabby chic man braid butcher narwhal 3 wolf moon disrupt, lo-fi aesthetic post-ironic celiac coloring book chillwave asymmetrical selfies. Helvetica bespoke ramps venmo snackwave gastropub. Ugh bushwick cloud bread cred 90's kinfolk celiac cold-pressed farm-to-table. Tilde vexillologist semiotics, tofu hashtag food truck williamsburg PBR&B farm-to-table franzen heirloom. Meditation keffiyeh pabst, aesthetic irony cardigan shabby chic pork belly tousled brunch. Fam poke flexitarian, la croix thundercats chartreuse meh humblebrag lyft farm-to-table. Pok pok brooklyn blog raw denim vegan 3 wolf moon pitchfork. Art party cold-pressed listicle pabst microdosing. Vaporware ennui snackwave before they sold out, banjo try-hard actually brunch tumeric fixie affogato meggings put a bird on it intelligentsia selfies. DIY next level post-ironic, bespoke lumbersexual williamsburg heirloom portland try-hard tote bag cold-pressed XOXO.</p>
-                            </div>
+            <div class="row">
+                <div class="outer-box">
+                    <div class="story-box js--wp-1">
+                        <div class="row">
+                            <h1>Our Story</h1>
                         </div>
-                    </div>    
+                        <div class="row">
+                            <p>La croix pug typewriter adaptogen trust fund farm-to-table meh affogato umami slow-carb af. Man braid viral venmo, meditation migas sriracha pour-over synth shoreditch trust fund. Stumptown austin prism, vinyl franzen heirloom raw denim viral vegan humblebrag sriracha freegan chartreuse brunch messenger bag. Franzen cred cloud bread activated charcoal, humblebrag chartreuse adaptogen deep v iceland tousled health goth echo park. Lomo man bun ramps gentrify glossier tumblr. Shabby chic man braid butcher narwhal 3 wolf moon disrupt, lo-fi aesthetic post-ironic celiac coloring book chillwave asymmetrical selfies. Helvetica bespoke ramps venmo snackwave gastropub. Ugh bushwick cloud bread cred 90's kinfolk celiac cold-pressed farm-to-table. Tilde vexillologist semiotics, tofu hashtag food truck williamsburg PBR&B farm-to-table franzen heirloom. Meditation keffiyeh pabst, aesthetic irony cardigan shabby chic pork belly tousled brunch. Fam poke flexitarian, la croix thundercats chartreuse meh humblebrag lyft farm-to-table. Pok pok brooklyn blog raw denim vegan 3 wolf moon pitchfork. Art party cold-pressed listicle pabst microdosing. Vaporware ennui snackwave before they sold out, banjo try-hard actually brunch tumeric fixie affogato meggings put a bird on it intelligentsia selfies. DIY next level post-ironic, bespoke lumbersexual williamsburg heirloom portland try-hard tote bag cold-pressed XOXO.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
