updated room rate copy, added webkit configs

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </div>
                         <div class="blurb">
                             <h3><span>Kevin</span>&#8212;Groomsman</h3>
-                            <p>Few people make Tim laugh like Kevin Crampton. Friends since peewee football, Tim has watched “The Fish” grow from a tiny aquatic lifeform into a damn fine man. In high school, Kevin and Tim shepherded their intramural basketball dynasty to dead last. It’s been uphill ever since.</p>
+                            <p>Few people make Tim laugh like Kevin Crampton. Friends since peewee foot  ball, Tim has watched “The Fish” grow from a tiny aquatic lifeform into a damn fine man. In high school, Kevin and Tim shepherded their intramural basketball dynasty to dead last. It’s been uphill ever since.</p>
                         </div>
                         <div>
                             <img src='resources/css/img/gruber.jpg' alt='Matt'>
@@ -199,12 +199,12 @@
                         <a href="http://hewinghotel.com/" target="_blank"><h3>The Hewing Hotel</h3>
                         <p>300 Washington Avenue North<br>
                             Minneapolis, MN 55401</p></a>
-                        <p>We’ve secured a room block for a discounted rate beginning at $259/night. You can reserve a room by calling the hotel directly and mentioning the McCullough/Kelly wedding block. Please book by April 18, 2018.</p>
+                        <p>We’ve secured a room block for a discounted rate starting at $259/night. You can reserve a room by calling the hotel directly and mentioning the McCullough/Kelly wedding block. Please book by April 18, 2018.</p>
                         <br>
                         <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=McCullough%20Kelly%20Wedding%5Emspts%60mckmcka%60119.00%60USD%60false%603%605/18/18%605/20/18%604/18/18&app=resvlink&stop_mobi=yes" target="_blank"><h3>Townplace Suites Minneapolis</h3>
                         <p>525 North Second Street<br>
                             Minneapolis, MN 55401</p></a>
-                        <p>We’ve secured a room block starting at a discounted rate beginning at $119/night. Please book by April 18, 2018.<br>
+                        <p>We’ve secured a room block for a discounted rate starting at $119/night. Please book by April 18, 2018.<br>
                         <br>
                         <h3>Airport Code: MSP</h3>
                         </div>
